name:                editable
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  demo.hs
cabal-version:       >=1.10

library
  exposed-modules:     Data.Editable
  build-depends:       base >=4.7 && <4.8, text >=1.1 && <1.2, vty, vty-ui
  default-language:    Haskell2010
