name:                editable
version:             1.0.0.0
synopsis:            Interactive editors for Generics
description:         
  Editable can derive editors for data types.
  .
  Add @deriving Generic@ and @instance Editable Foo@ to your
  data type, and you can launch an editor for it with
  @editor :: Editable a => a -> IO a@.
  .
  @
    {-# LANGUAGE DeriveGeneric #-}
    module Demo where
  .
    import Data.Editable
    import GHC.Generics
  .
    data Foo = Bar String Int | Baz Int
      deriving (Show, Generic)
  .
    instance Editable Foo
  @
  <<https://cloud.githubusercontent.com/assets/136101/3006789/f235419e-de4d-11e3-8a4e-796d5b9ae49c.png>>

license:             BSD2
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
copyright:           Copyright (C) 2014 Maxwell Swadling
category:            Data
build-type:          Simple
extra-source-files:  demo.hs
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Data.Editable
  build-depends:       base >=4.6 && <4.8, text >=1.1 && <1.2, vty == 4.7.5, vty-ui == 1.7.*
  default-language:    Haskell2010
